# CompilersCourse

./: CMakeLists.txt  README.md
02-parsers/: parser.y
03-parsers-with-ast/: CMakeLists.txt  driver.hh  elements.h  forward_decl.h  main.cpp  parser.y  scanner.l
03-parsers-with-ast/nterms_classes/: BinaryOperator.cpp  BinaryOperator.h  Formal.cpp  Formal.h  FormalList.cpp  FormalList.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h  MethodInvocation.cpp  MethodInvocation.h  Program.cpp  Program.h  TypeIdentifier.cpp  TypeIdentifier.h
03-parsers-with-ast/nterms_classes/Lvalue/: ArrayElementLvalue.cpp  ArrayElementLvalue.h  Lvalue.h  SimpleLvalue.cpp  SimpleLvalue.h
03-parsers-with-ast/nterms_classes/class_declarations/: ClassDeclaration.cpp  ClassDeclaration.h  ClassDeclarationList.cpp  ClassDeclarationList.h  ClassExtendsDeclaration.cpp  ClassExtendsDeclaration.h  MainClass.cpp  MainClass.h
03-parsers-with-ast/nterms_classes/declarations/: Declaration.cpp  Declaration.h  DeclarationClass.h  DeclarationList.cpp  DeclarationList.h  MethodDeclaration.cpp  MethodDeclaration.h  VariableDeclaration.cpp  VariableDeclaration.h
04-visitors/: CMakeLists.txt  driver.cpp  driver.hh  elements.h  main.cpp  parser.y  scanner.l
04-visitors/nterms_classes/: BinaryOperator.cpp  BinaryOperator.h  Formal.cpp  Formal.h  FormalList.cpp  MethodInvocation.cpp  MethodInvocation.h  Program.cpp  Program.h
04-visitors/symbol_table/: ScopeLayer.cpp  ScopeLayerTree.cpp  ScopeLayerTree.h
04-visitors/visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.h  TemplateVisitor.h  Visitor.h  forward_decl.h
05-variable-scopes/expressions/: AddExpression.cpp  AddExpression.h
05-variable-scopes/tests/: test_scope_layer.cpp
05-variable-scopes/visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  Visitor.h  forward_decl.h
06-function-calls/: CMakeLists.txt
06-methods/: CMakeLists.txt  driver.cpp  main.cpp
06-methods/grammar/: CMakeLists.txt  parser.y  scanner.l
06-methods/grammar/nterms_classes/: FormalList.h  MethodInvocation.h  TypeIdentifier.cpp
06-methods/grammar/nterms_classes/Lvalue/: ArrayElementLvalue.h  Lvalue.h  SimpleLvalue.h
06-methods/grammar/nterms_classes/class_declarations/: ClassDeclaration.h
06-methods/grammar/nterms_classes/declarations/: MethodDeclaration.cpp  MethodDeclaration.h
06-methods/grammar/nterms_classes/expressions/: AccessToArrayElementExpression.cpp  ArrayDefenitionExpression.cpp  ArrayDefenitionExpression.h  ArrayNewExpression.h  BinaryOperatorExpression.cpp  BoolExpression.cpp  DefenitionExpression.cpp  DefenitionExpression.h  NewExpression.cpp  NotExpression.h  ThisExpression.h
06-methods/grammar/nterms_classes/statements/: IfStatement.h  LocalVariableDeclarationStatement.cpp  WhileStatement.cpp
06-methods/grammar/nterms_classes/type/: Type.cpp
06-methods/include/: driver.hh
06-methods/include/visitors/: Visitor.h  forward_decl.h
06-methods/method-mechanisms/: ClassStorage.cpp  ClassStorage.h  Frame.cpp  Frame.h
06-methods/objects/: ClassType.cpp  ClassType.h  MainClassType.cpp  MainClassType.h  MethodType.cpp  MethodType.h  ObjectType.cpp  ObjectType.h  PrimitiveArrayType.cpp  PrimitiveArrayType.h  PrimitiveObjectType.cpp  PrimitiveObjectType.h  PrimitiveSimpleType.cpp  PrimitiveSimpleType.h  PrimitiveType.h
06-methods/objects/objs/: ArrayObject.cpp  Object.h  VariableObject.cpp  VariableObject.h
06-methods/symbol_table/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.h  Symbol.h
06-methods/visitors/: Interpreter.cpp  Interpreter.h  MethodCallVisitor.cpp  MethodCallVisitor.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  elements.h
irtree-canonization/: CMakeLists.txt  driver.cpp  main.cpp
irtree-canonization/method-mechanisms/: ClassStorage.cpp  ClassStorage.h  FrameTranslator.cpp  FunctionTable.cpp
irtree-canonization/objects/: ClassType.cpp  ObjectType.h  PrimitiveArrayType.cpp  PrimitiveType.cpp  PrimitiveType.h
irtree-canonization/visitors/: IrtreeBuildVisitor.h  TemplateVisitor.cpp
irtree-optimization/: CMakeLists.txt  driver.cpp
irtree-optimization/grammar/: CMakeLists.txt  parser.y
irtree-optimization/grammar/nterms_classes/: FormalList.cpp  FormalList.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h
irtree-optimization/grammar/nterms_classes/Lvalue/: ArrayElementLvalue.cpp  SimpleLvalue.cpp
irtree-optimization/grammar/nterms_classes/class_declarations/: ClassDeclarationList.cpp  MainClass.h
irtree-optimization/grammar/nterms_classes/declarations/: VariableDeclaration.h
irtree-optimization/grammar/nterms_classes/expressions/: BoolExpression.h  NotExpression.cpp  ParenthesisExpression.h
irtree-optimization/grammar/nterms_classes/statements/: AssertStatement.cpp  AssertStatement.h  SoutStatement.h
irtree-optimization/grammar/nterms_classes/type/: Type.h
irtree-optimization/irtree/: CMakeLists.txt  consts.h
irtree-optimization/irtree/nodes/expressions/: ConstExpression.cpp  EseqExpression.cpp  EseqExpression.h  Expression.h  NameExpression.cpp
irtree-optimization/irtree/nodes/statements/: ExpStatement.h  SeqStatement.cpp  SeqStatement.h
irtree-optimization/irtree/visitors/: DoubleCallEliminateVisitor.cpp  ESEQEliminateVisitor.h  Linearizer.cpp  Linearizer.h
irtree-optimization/method-mechanisms/: ClassStorage.h  Frame.h  FrameTranslator.cpp  FrameTranslator.h
irtree-optimization/objects/: ClassType.cpp  ClassType.h  MethodType.cpp  MethodType.h  ObjectType.h  PrimitiveArrayType.h  PrimitiveSimpleType.cpp  PrimitiveSimpleType.h  PrimitiveType.h
irtree-optimization/objects/objs/: ArrayObject.h  Object.cpp
irtree-optimization/objects/objs_creation/: ObjectCreation.h
irtree-optimization/symbol_table/: ScopeLayer.h
irtree-optimization/visitors/: IrtreeBuildVisitor.cpp  IrtreeBuildVisitor.h  MethodCallVisitor.h  PrintVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.cpp  TypeResolver.cpp  TypeResolver.h
milestones/: 02-ast-tree.md
(+130 files in other folders)
